--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "lib": [
       "ES2020"
     ],
-    "module": "ES2020",
-    "moduleResolution": "Node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "outDir": "dist",
     "rootDir": "src",
     "esModuleInterop": true,
