--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     ],
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
+    "isolatedModules": true,
+    "allowJs": true,
+    "resolveJsonModule": true,
     "outDir": "dist",
     "rootDir": "src",
     "esModuleInterop": true,
